// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortArrow Style tests should render with ascending arrow styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

<span
  class="circuit-0 circuit-1"
>
  <div>
    arrow.svg
  </div>
</span>
`;

exports[`SortArrow Style tests should render with both arrows styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

.circuit-0 {
  margin-top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<span
  class="circuit-2 circuit-3"
>
  <div
    class="circuit-0 circuit-1"
  >
    arrow.svg
  </div>
  <div>
    arrow.svg
  </div>
</span>
`;

exports[`SortArrow Style tests should render with descending arrow styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

.circuit-0 {
  margin-top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<span
  class="circuit-2 circuit-3"
>
  <div
    class="circuit-0 circuit-1"
  >
    arrow.svg
  </div>
</span>
`;
